# drunk-sloth

./: .gitignore  1GRW_kannan_44_to_20.basis  1GRW_kannan_44_to_22.basis  1GRW_kannan_44_to_24.basis  1GRW_kannan_reduced_bkz44.basis  22_scaled.basis  24_scaled.basis  Cargo.toml  IMPLEMENTATION_SUMMARY.md  LICENSE  PROJECT_STRUCTURE.md  README.md  build.rs  scale_basis.py
benches/: gpu_bench.rs  lattice_benchmarks.rs
examples/: identity_2d.mat  identity_3d.mat  random_4d.mat
lightweight_kernelcpp_test/: basis_original_20x20.basis  compare_lll.py  kernels.cu  kernels.cuh  kernels.ptx  kernels_alternative.cu  lll_check.py  test_lll  test_lll.cu
src/: bkz.rs  config.toml  cvp.rs  features.rs  gpu.rs  lib.rs  lll.rs  main-bak.rs  main.rs  precision.rs  svp.rs  tests.rs  utils.rs
src/core/: architecture.rs  bigint_lattice.rs  bigint_matrix.rs  error.rs  integer_lll.rs  lattice.rs  matrix.rs  mod.rs  orchestrator.rs  types.rs
src/gpu/: engine.rs  kernels.cu
src/precision/: engine.rs
src/shaders/: gram_schmidt.wgsl  lll_reduction.wgsl  matrix_vector.wgsl
