[package]
name = "lattice_solver"
version = "1.0.0"
authors = [""]
description = "Production-ready lattice reduction crate with LLL, BKZ, SVP, and CVP solvers"
license = "MIT"
edition = "2024"

[lib]
name = "lattice_solver"
path = "src/lib.rs"

[[bin]]
name = "lattice_cli"
path = "src/main.rs"

[features]
default = []
gpu = ["dep:rustacuda", "dep:rustacuda_core"]
high-precision = ["dep:rug"]
parallel = ["dep:rayon", "dep:crossbeam"]

[dependencies]
# Core dependencies
log = "0.4"
env_logger = "0.11.8"
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.9.2"


# Optional GPU support
rustacuda = { version = "0.1.3", optional = true }
rustacuda_core = { version = "0.1.2", optional = true }
rustacuda_derive = { version = "0.1.2", optional = true }
# Optional high precision arithmetic
# mpfr = { version = "0.0.8", optional = true }
rug = { version = "1.28.0", default-features = false, features = ["float", "integer"], optional = true }


# Optional parallel processing
rayon = { version = "1.8", optional = true }
crossbeam = { version = "0.8", optional = true }
tokio = { version = "1.48", features = ["macros", "rt-multi-thread", "full"] }
proptest = "1.4"


[dev-dependencies]
criterion = "0.7"
proptest = "1.4"

[[bench]]
name = "lattice_benchmarks"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
